--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.idealcn.define.view">
 
+    <supports-screens android:normalScreens="true"
+        />
+
+
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +23,8 @@
         </activity>
         <activity android:name=".ui.ClockActivity" />
         <activity android:name=".ui.ProgressBarActivity" />
+        <activity android:name=".ui.RoundCakeActivity" />
     </application>
+
 
 </manifest>
