--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.ProgressBarActivity" />
         <activity android:name=".ui.RoundCakeActivity" />
         <activity android:name=".ui.DragActivity" />
+        <activity android:name=".ui.TableActivity" />
     </application>
 
 
