加入流式布局，并实现自定义的view的文本居中显示

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".ui.DragActivity" />
         <activity android:name=".ui.TableActivity" />
         <activity android:name=".ui.FlowLayoutActivity" />
+        <activity android:name=".ui.PaddingActivity" />
     </application>
 
 
