加入时间轴

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".ui.TableActivity" />
         <activity android:name=".ui.FlowLayoutActivity" />
         <activity android:name=".ui.PaddingActivity" />
+        <activity android:name=".ui.TimeAxisActivity" />
     </application>
 
 
