--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/caches
+/.idea/codeStyles
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/runConfigurations.xml
+/.idea/workspace.xml
 .DS_Store
 /build
 /captures
