--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".ui.FlowLayoutActivity" />
         <activity android:name=".ui.PaddingActivity" />
         <activity android:name=".ui.TimeAxisActivity" />
+        <activity android:name=".ui.PositionActivity" />
     </application>
 
 
