--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 *.iml
 .gradle
 /local.properties
+/.idea/caches
+/.idea/codeStyles
+/.idea/copyright
 /.idea/workspace.xml
 /.idea/libraries
+/.idea/modules.xml
+/.idea/runConfigurations.xml
 .DS_Store
 /build
 /captures
