--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.idealcn.define.view"
-        minSdkVersion 15
+        minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -36,11 +36,11 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:27.1.1'
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
     testCompile 'junit:junit:4.12'
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    //    implementation 'com.android.support:cardview-v7:26.0.2'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    def VERSION_SUPPORT = '27.1.1'
+    implementation "com.android.support:appcompat-v7:$VERSION_SUPPORT"
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.android.support:cardview-v7:$VERSION_SUPPORT"
+    implementation "com.android.support:support-v4:$VERSION_SUPPORT"
+    implementation "com.android.support:design:$VERSION_SUPPORT"
 }
