--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".ui.PaddingActivity" />
         <activity android:name=".ui.TimeAxisActivity" />
         <activity android:name=".ui.PositionActivity" />
+        <activity android:name=".ui.DefineViewGroupActivity" />
     </application>
 
 
