--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,14 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion '28.0.3'
+    //buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.idealcn.define.view"
         minSdkVersion 19
-        targetSdkVersion 28
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -43,4 +45,8 @@ dependencies {
     implementation "com.android.support:cardview-v7:$VERSION_SUPPORT"
     implementation "com.android.support:support-v4:$VERSION_SUPPORT"
     implementation "com.android.support:design:$VERSION_SUPPORT"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
