--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 /.idea/workspace.xml
 /.idea/libraries
 /.idea/modules.xml
+/.idea/gradle.xml
 /.idea/runConfigurations.xml
 /.idea/misc.xml
 .DS_Store
